# plex_theme_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  example.json
src/: main.rs
src/commands/: delete.rs  derive.rs  mod.rs  update.rs
src/lib/: config.rs  helpers.rs
